--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ div.chart{
   margin: auto;
   width: 100%;
   height: 700px;
-  overflow: auto;
+  overflow: scroll;
   box-shadow: inset -8px -8px 10px 10px rgba(0,0,0,.25);
 }
 
