--- a/style.css
+++ b/style.css
@@ -544,19 +544,14 @@ hr {
   flex: 3;
   border-radius: 20px 20px 0 0;
   display: flex;
+  height: 100%;
+  width: 100%;
 }
 
 .grid-box-top img {
   margin: auto;
-  max-width: 90%;
-  max-height: 90%;
-  object-fit: contain;
-}
-
-img.grid-box-top {
-  margin: auto;
-  max-width: 90%;
-  max-height: 90%;
+  max-width: 95%;
+  max-height: 95%;
   object-fit: contain;
 }
 
