--- a/style.css
+++ b/style.css
@@ -614,7 +614,7 @@ a.grid-box {
 }
 
 .jumbotron#olin {
-  background-image: url(assets/img/background/olin.png);
+  background-image: url(assets/img/background/olin.jpg);
   background-position: center top;
 }
 
