--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ p {
 }
 
 .header {
-  background: url(assets/img/background/sloan_edit.JPG) no-repeat center top; 
+  background: url(assets/img/background/sloan_edit.jpg) no-repeat center top; 
   background-size: cover;
   height: 125vh;
   text-align: center;
