--- a/style.css
+++ b/style.css
@@ -586,6 +586,16 @@ div#readmore {
   justify-content: center;
 }
 
+button#mybuttonid {
+  padding: 10px;
+  font-size: 16px;
+  font-weight: 700;
+  border: none;
+  border-radius: 30px;
+  background-color: rgb(182, 215, 182);
+  margin-top: 20px;
+}
+
 /* .bio em {
   font-family: 'LM Roman It','Times New Roman', Times, serif;
   font-size: 16pt;
